mobile screen element shifting fix

--- a/fylo-dark-theme-landing-page-master/style.css
+++ b/fylo-dark-theme-landing-page-master/style.css
@@ -1670,6 +1670,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:-top-28 {
+    top: -7rem;
+  }
+
   .lg\:m-0 {
     margin: 0px;
   }
@@ -1740,6 +1744,10 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
   }
 
   .lg\:content-center {
